# tealight

./: .bazelrc  .gitignore  MODULE.bazel  README.md
src/: BUILD.bazel  example.cpp  value.cpp
test/: BUILD.bazel  demo.py  test_example.py  test_value.py
