# MODULE.bazel
module(
    name = "tealight",
    version = "0.0.1",
)

# Add nanobind
bazel_dep(name = "nanobind_bazel", version = "2.9.2") # Use the latest version

# Add rules_python
bazel_dep(name = "rules_python", version = "0.40.0")

# Configure Python interpreter
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

# Set up pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "project_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "project_pip")